[gd_scene load_steps=57 format=3 uid="uid://c3grgo0ij85al"]

[ext_resource type="Script" path="res://Scenes/Tutorial/Tutorial.gd" id="1_sirrx"]
[ext_resource type="Shader" path="res://Ressources/ShaderTextures/day-night-cycle-shader.gdshader" id="2_5dc8g"]
[ext_resource type="Texture2D" uid="uid://cp05y7uvcttym" path="res://Ressources/ShaderTextures/CloudsDistort.bmp" id="3_o3jri"]
[ext_resource type="Texture2D" uid="uid://c4sagkiuhldgo" path="res://Ressources/ShaderTextures/CloudsNoise.bmp" id="4_h3b6g"]
[ext_resource type="Texture2D" uid="uid://c4aieymtlgqp" path="res://Ressources/ShaderTextures/Clouds_2.bmp" id="5_g4p7r"]
[ext_resource type="Texture2D" uid="uid://cak2xtjmv87xs" path="res://Ressources/ShaderTextures/stars.bmp" id="6_0abyj"]
[ext_resource type="Texture2D" uid="uid://drdqhewnmiq1o" path="res://Ressources/Textures/blueprint.jpg" id="7_a05x7"]
[ext_resource type="PackedScene" uid="uid://cb1xwmbnkdeun" path="res://Models/Player.tscn" id="8_koicw"]
[ext_resource type="PackedScene" uid="uid://o5es8qrx4r3d" path="res://Models/star.tscn" id="9_qtakh"]
[ext_resource type="Resource" uid="uid://cjk1wd322otqi" path="res://Ressources/Stars/Stars/Aries/star2.tres" id="10_5fk10"]
[ext_resource type="Resource" uid="uid://dha8827twab3n" path="res://Ressources/Stars/Stars/Aries/star4.tres" id="12_h01my"]
[ext_resource type="Resource" uid="uid://dxa8ubvxniqc8" path="res://Ressources/Stars/Stars/Taurus/star5.tres" id="13_cscff"]
[ext_resource type="Resource" uid="uid://c7c45v0j111ap" path="res://Ressources/Stars/Stars/Taurus/star6.tres" id="14_jicu8"]
[ext_resource type="Resource" uid="uid://b1uvcb7583p6i" path="res://Ressources/Stars/Stars/Taurus/star7.tres" id="15_mbg5o"]
[ext_resource type="Resource" uid="uid://f52rw7qj75qn" path="res://Ressources/Stars/Stars/Taurus/star8.tres" id="16_4ubf4"]
[ext_resource type="Resource" uid="uid://bb8cxcm5cpjmf" path="res://Ressources/Stars/Stars/Taurus/star9.tres" id="17_n0xha"]
[ext_resource type="Script" path="res://Scenes/UI_Overlays_ingame/UIManager.gd" id="18_um8by"]
[ext_resource type="Script" path="res://Scenes/UI_Overlays_ingame/Inventory/InventoryPanel.gd" id="19_6ujbf"]
[ext_resource type="Texture2D" uid="uid://blhl6iqpoxakj" path="res://Ressources/Inventory/background.png" id="20_mt1e7"]
[ext_resource type="Theme" uid="uid://b1liyjis8dsej" path="res://Ressources/Themes/inv_starsign_button_theme.tres" id="21_xdbcw"]
[ext_resource type="FontFile" uid="uid://vbcxsf2ea7l" path="res://Ressources/UI/Starsign.ttf" id="22_6xsmk"]
[ext_resource type="Script" path="res://Ressources/Inventory/StarSignButtons.gd" id="23_8cq7h"]
[ext_resource type="Resource" uid="uid://bitithh64yj66" path="res://Ressources/Stars/StarSigns/0.tres" id="24_besou"]
[ext_resource type="Resource" uid="uid://cym6sjb5iq5rj" path="res://Ressources/Stars/StarSigns/1.tres" id="25_ke4w0"]
[ext_resource type="Resource" uid="uid://ccn6ripcb6aue" path="res://Ressources/Stars/StarSigns/2.tres" id="26_sq0qv"]
[ext_resource type="Resource" uid="uid://uj2qbc4dvq5" path="res://Ressources/Stars/StarSigns/3.tres" id="27_hn5k6"]
[ext_resource type="Resource" uid="uid://ne0rn8cvifvx" path="res://Ressources/Stars/StarSigns/4.tres" id="28_5vsda"]
[ext_resource type="Resource" uid="uid://bh6xt4kiesyeu" path="res://Ressources/Stars/StarSigns/5.tres" id="29_n5uh0"]
[ext_resource type="Resource" uid="uid://c753o0urgjppa" path="res://Ressources/Stars/StarSigns/6.tres" id="30_52u65"]
[ext_resource type="Resource" uid="uid://diyjtgh0w6aq8" path="res://Ressources/Stars/StarSigns/7.tres" id="31_5ysy7"]
[ext_resource type="Resource" uid="uid://bcwix2qnc4wad" path="res://Ressources/Stars/StarSigns/8.tres" id="32_sfev2"]
[ext_resource type="Resource" uid="uid://iehvnwofmcgm" path="res://Ressources/Stars/StarSigns/9.tres" id="33_tkaa4"]
[ext_resource type="Resource" uid="uid://by7fwsoesdecg" path="res://Ressources/Stars/StarSigns/10.tres" id="34_o5tw2"]
[ext_resource type="Resource" uid="uid://dak3jau0cbas4" path="res://Ressources/Stars/StarSigns/11.tres" id="35_2krnq"]
[ext_resource type="Script" path="res://Scenes/UI_Overlays_ingame/Inventory/SignFrame.gd" id="36_lclfm"]
[ext_resource type="Script" path="res://Scenes/UI_Overlays_ingame/PausePopUp.gd" id="37_pkwg5"]
[ext_resource type="Theme" uid="uid://bwa0rxrtswmu7" path="res://Ressources/Themes/menu_title_theme.tres" id="38_6f13n"]
[ext_resource type="PackedScene" uid="uid://cvtm4nnjdhm5f" path="res://compass/Compass.tscn" id="39_jqxx3"]
[ext_resource type="PackedScene" uid="uid://jbdwfx2nid4t" path="res://Scenes/UI_Overlays_ingame/star_progress_scene.tscn" id="40_mllpk"]
[ext_resource type="Script" path="res://Scenes/UI_Overlays_ingame/StarCounter.gd" id="41_o5osa"]
[ext_resource type="PackedScene" uid="uid://13gkl48m34xd" path="res://Scenes/Sprites/DefaultCube.tscn" id="42_iv1be"]
[ext_resource type="PackedScene" uid="uid://ovfqhpup1l7" path="res://Scenes/Enviroment/SpatialGrass.tscn" id="43_4ojq0"]
[ext_resource type="PackedScene" uid="uid://dqny5y5aeqft6" path="res://Models/Enviroment/tree.tscn" id="44_vokpm"]
[ext_resource type="PackedScene" uid="uid://c45cpn8ua01d2" path="res://Models/Enviroment/Buildings/column.tscn" id="45_lx214"]
[ext_resource type="PackedScene" uid="uid://daenuv4l0uin5" path="res://Models/Enviroment/Buildings/brick_wall_with_holes.tscn" id="46_cibdb"]
[ext_resource type="PackedScene" uid="uid://bsmxs8trdh8e1" path="res://Models/Enviroment/Buildings/crystals.tscn" id="47_inrd4"]
[ext_resource type="PackedScene" uid="uid://bn1yn58t2nfnc" path="res://Models/Enviroment/Buildings/brick_wall.tscn" id="47_ryeko"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lk4hg"]
shader = ExtResource("2_5dc8g")
shader_parameter/SunSetDuration = 0.3
shader_parameter/dayColor = Color(0.437123, 0.648819, 0.834795, 1)
shader_parameter/dayTopColor = Color(0.786113, 1, 0.743535, 1)
shader_parameter/nightColor = Color(0.0189742, 0.044752, 0.109693, 1)
shader_parameter/nightTopColor = Color(0.165353, 0.182164, 0.261057, 1)
shader_parameter/sunriseColor = Color(0.888018, 0.554976, 0.395547, 1)
shader_parameter/sunsetColor = Color(0.944165, 0.412657, 0.51578, 1)
shader_parameter/horizon_falloff = 0.5
shader_parameter/horizon_color_day = Color(0.267247, 0.89758, 0.555776, 1)
shader_parameter/horizon_color_sunset = Color(0.868754, 0.211866, 0.293465, 1)
shader_parameter/horizon_color_night = Color(0.123465, 0.0059564, 0.358798, 1)
shader_parameter/clouds_main_color = Color(1, 1, 1, 1)
shader_parameter/clouds_edge_color = Color(0.228758, 0.104365, 0.671744, 1)
shader_parameter/cloudsSunsetEdgeColor = Color(0.386576, 0.0189799, 0.152415, 1)
shader_parameter/clouds_speed = 0.05
shader_parameter/clouds_scale = 0.18
shader_parameter/clouds_cutoff = 0.02
shader_parameter/clouds_fuzziness = 0.47
shader_parameter/clouds_texture = ExtResource("5_g4p7r")
shader_parameter/clouds_distort_texture = ExtResource("3_o3jri")
shader_parameter/clouds_noise_texture = ExtResource("4_h3b6g")
shader_parameter/stars_cutoff = 0.08
shader_parameter/stars_speed = 0.046
shader_parameter/stars_texture = ExtResource("6_0abyj")
shader_parameter/sunColor = Color(0.968627, 0.937255, 0.690196, 1)
shader_parameter/sunColorSunrise = Color(0.940861, 0.335791, 0.275079, 1)
shader_parameter/sunSize = 0.1
shader_parameter/sun_blur = 0.4
shader_parameter/moonColor = Color(0.720467, 0.720468, 0.720467, 1)
shader_parameter/moonSize = 0.1
shader_parameter/moonOffset = 0.05

[sub_resource type="Sky" id="Sky_qehcw"]
sky_material = SubResource("ShaderMaterial_lk4hg")

[sub_resource type="Environment" id="Environment_gbmld"]
background_mode = 2
sky = SubResource("Sky_qehcw")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jfl0u"]
albedo_texture = ExtResource("7_a05x7")

[sub_resource type="PlaneMesh" id="PlaneMesh_in0bf"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_n6r7d"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="BoxMesh" id="BoxMesh_sfwq1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ffsm"]
albedo_texture = ExtResource("7_a05x7")

[sub_resource type="BoxShape3D" id="BoxShape3D_fk3pu"]

[node name="GameScene" type="Node3D"]
script = ExtResource("1_sirrx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gbmld")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.46739, 0.884051, 0, -0.884051, -0.46739, 0, 0.227087, -0.199935)
shadow_enabled = true

[node name="FloorPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(13.8629, 0, 0, 0, 13.8629, 0, 0, 0, 13.8629, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_jfl0u")
mesh = SubResource("PlaneMesh_in0bf")

[node name="Floor" type="StaticBody3D" parent="FloorPlane"]
transform = Transform3D(0.66195, 0, 0, 0, 0.66195, 0, 0, 0, 0.66195, 0, 0.000853974, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloorPlane/Floor"]
transform = Transform3D(1.51447, 0, 0, 0, 1.51447, 0, 0, 0, 1.51447, 0, -0.00766056, 0)
shape = SubResource("ConcavePolygonShape3D_n6r7d")

[node name="Player" parent="." instance=ExtResource("8_koicw")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.440202, 0)

[node name="Stars" type="Node3D" parent="."]

[node name="Star" parent="Stars" instance=ExtResource("9_qtakh")]
transform = Transform3D(0.193805, 0, 0, 0, -8.4715e-09, -0.193805, 0, 0.193805, -8.4715e-09, 13.6347, 5.27514, -0.0473013)

[node name="Star2" parent="Stars" instance=ExtResource("9_qtakh")]
transform = Transform3D(0.193805, 0, 0, 0, -8.4715e-09, -0.193805, 0, 0.193805, -8.4715e-09, -11.3291, 3.63194, 0)
star = ExtResource("10_5fk10")

[node name="Star4" parent="Stars" instance=ExtResource("9_qtakh")]
transform = Transform3D(0.193805, 0, 0, 0, -8.4715e-09, -0.193805, 0, 0.193805, -8.4715e-09, -13.275, 0.833714, 0)
star = ExtResource("12_h01my")

[node name="Star5" parent="Stars" instance=ExtResource("9_qtakh")]
transform = Transform3D(0.193805, 0, 0, 0, -8.4715e-09, -0.193805, 0, 0.193805, -8.4715e-09, -13.275, 0.833714, -1.44754)
star = ExtResource("13_cscff")

[node name="Star6" parent="Stars" instance=ExtResource("9_qtakh")]
transform = Transform3D(0.193805, 0, 0, 0, -8.4715e-09, -0.193805, 0, 0.193805, -8.4715e-09, -13.275, 0.833714, -2.69138)
star = ExtResource("14_jicu8")

[node name="Star7" parent="Stars" instance=ExtResource("9_qtakh")]
transform = Transform3D(0.193805, 0, 0, 0, -8.4715e-09, -0.193805, 0, 0.193805, -8.4715e-09, -13.275, 0.833714, -4.06808)
star = ExtResource("15_mbg5o")

[node name="Star8" parent="Stars" instance=ExtResource("9_qtakh")]
transform = Transform3D(0.193805, 0, 0, 0, -8.4715e-09, -0.193805, 0, 0.193805, -8.4715e-09, -13.275, 0.833714, -5.12577)
star = ExtResource("16_4ubf4")

[node name="Star9" parent="Stars" instance=ExtResource("9_qtakh")]
transform = Transform3D(0.193805, 0, 0, 0, -8.4715e-09, -0.193805, 0, 0.193805, -8.4715e-09, -13.2849, 0.833714, -6.10104)
star = ExtResource("17_n0xha")

[node name="Box1" type="MeshInstance3D" parent="."]
transform = Transform3D(4.67243, 0, 0, 0, 2.99633, 0, 0, 0, 8.33861, -10.7161, 1.27817, 0)
mesh = SubResource("BoxMesh_sfwq1")
surface_material_override/0 = SubResource("StandardMaterial3D_0ffsm")

[node name="StaticBody3D" type="StaticBody3D" parent="Box1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Box1/StaticBody3D"]
shape = SubResource("BoxShape3D_fk3pu")

[node name="Box2" type="MeshInstance3D" parent="."]
transform = Transform3D(2.24153, 0, 0, 0, 1.43744, 0, 0, 0, 4.00032, -10.7161, 0.633489, -4.52162)
mesh = SubResource("BoxMesh_sfwq1")
surface_material_override/0 = SubResource("StandardMaterial3D_0ffsm")

[node name="StaticBody3D" type="StaticBody3D" parent="Box2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Box2/StaticBody3D"]
shape = SubResource("BoxShape3D_fk3pu")

[node name="UIManager" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("18_um8by")

[node name="UIOverlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="InventoryPanel" type="Panel" parent="UIOverlay"]
process_mode = 2
visible = false
self_modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 1197.0
offset_right = 1921.0
offset_bottom = 1080.0
script = ExtResource("19_6ujbf")

[node name="TextureRect" type="TextureRect" parent="UIOverlay/InventoryPanel"]
modulate = Color(0.886262, 0.886261, 0.886262, 1)
layout_mode = 0
offset_left = -22.0
offset_right = 1668.0
offset_bottom = 1079.0
texture = ExtResource("20_mt1e7")
expand_mode = 3
stretch_mode = 4

[node name="Label" type="Label" parent="UIOverlay/InventoryPanel"]
layout_mode = 0
offset_left = 107.0
offset_top = 44.0
offset_right = 691.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 35
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="UIOverlay/InventoryPanel"]
layout_mode = 0
offset_left = 27.0
offset_top = 12.0
offset_right = 92.0
offset_bottom = 1063.0
color = Color(0, 0, 0, 0.52549)

[node name="VBoxContainer" type="VBoxContainer" parent="UIOverlay/InventoryPanel/ColorRect"]
process_mode = 2
layout_mode = 0
offset_top = 89.0
offset_right = 64.0
offset_bottom = 1015.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
text = "x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "C"
script = ExtResource("23_8cq7h")
starSign = ExtResource("24_besou")

[node name="Button2" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "D"
script = ExtResource("23_8cq7h")
starSign = ExtResource("25_ke4w0")

[node name="Button3" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "E"
script = ExtResource("23_8cq7h")
starSign = ExtResource("26_sq0qv")

[node name="Button4" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "F"
script = ExtResource("23_8cq7h")
starSign = ExtResource("27_hn5k6")

[node name="Button5" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "G"
script = ExtResource("23_8cq7h")
starSign = ExtResource("28_5vsda")

[node name="Button6" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "H"
script = ExtResource("23_8cq7h")
starSign = ExtResource("29_n5uh0")

[node name="Button7" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "I"
script = ExtResource("23_8cq7h")
starSign = ExtResource("30_52u65")

[node name="Button8" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "J"
script = ExtResource("23_8cq7h")
starSign = ExtResource("31_5ysy7")

[node name="Button9" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "L"
script = ExtResource("23_8cq7h")
starSign = ExtResource("32_sfev2")

[node name="Button10" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "M"
script = ExtResource("23_8cq7h")
starSign = ExtResource("33_tkaa4")

[node name="Button11" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "A"
script = ExtResource("23_8cq7h")
starSign = ExtResource("34_o5tw2")

[node name="Button12" type="Button" parent="UIOverlay/InventoryPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("21_xdbcw")
theme_override_fonts/font = ExtResource("22_6xsmk")
text = "B"
script = ExtResource("23_8cq7h")
starSign = ExtResource("35_2krnq")

[node name="StarCountForSign" type="Label" parent="UIOverlay/InventoryPanel"]
layout_mode = 0
offset_left = 625.0
offset_top = 968.0
offset_right = 688.0
offset_bottom = 1026.0
text = "??? / ???"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WeaponNameLabel" type="Label" parent="UIOverlay/InventoryPanel"]
layout_mode = 0
offset_left = 352.0
offset_top = 967.0
offset_right = 593.0
offset_bottom = 1025.0
text = "???"
vertical_alignment = 1

[node name="ActivateButton" type="Button" parent="UIOverlay/InventoryPanel"]
process_mode = 2
layout_mode = 2
offset_left = 114.0
offset_top = 981.0
offset_right = 311.0
offset_bottom = 1019.0
theme = ExtResource("21_xdbcw")
text = "Activate Weapon"

[node name="PageName" type="Label" parent="UIOverlay/InventoryPanel"]
layout_mode = 0
offset_left = 106.0
offset_top = 98.0
offset_right = 684.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0.817169, 0.673305, 0.997324, 1)
text = "???
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SignFrame" type="ColorRect" parent="UIOverlay/InventoryPanel"]
layout_mode = 0
offset_left = 110.0
offset_top = 149.0
offset_right = 690.0
offset_bottom = 560.0
pivot_offset = Vector2(0, 411)
color = Color(1, 1, 1, 0)
script = ExtResource("36_lclfm")

[node name="DescriptionFrame" type="ColorRect" parent="UIOverlay/InventoryPanel"]
layout_mode = 0
offset_left = 110.0
offset_top = 581.0
offset_right = 691.0
offset_bottom = 889.0
pivot_offset = Vector2(0, 422)
color = Color(0, 0, 0, 0.447059)

[node name="Label" type="Label" parent="UIOverlay/InventoryPanel/DescriptionFrame"]
layout_mode = 2
offset_left = 13.0
offset_top = 10.0
offset_right = 570.0
offset_bottom = 33.0
text = "Description"

[node name="DescriptionLabel" type="Label" parent="UIOverlay/InventoryPanel/DescriptionFrame"]
layout_mode = 2
offset_left = 13.0
offset_top = 41.0
offset_right = 570.0
offset_bottom = 292.0
theme_override_colors/font_color = Color(1, 1, 1, 0.72549)
theme_override_font_sizes/font_size = 15
text = "Description UwU"

[node name="PausePopUp" type="Panel" parent="UIOverlay"]
process_mode = 2
visible = false
layout_mode = 0
offset_left = 591.0
offset_top = 304.0
offset_right = 1335.0
offset_bottom = 672.0
script = ExtResource("37_pkwg5")

[node name="Label" type="Label" parent="UIOverlay/PausePopUp"]
layout_mode = 0
offset_left = 3.0
offset_top = 20.0
offset_right = 741.0
offset_bottom = 75.0
theme = ExtResource("38_6f13n")
text = "Game paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UIOverlay/PausePopUp"]
layout_mode = 0
offset_left = 182.0
offset_top = 99.0
offset_right = 572.0
offset_bottom = 320.0
theme_override_constants/separation = 30

[node name="MenuButton" type="Button" parent="UIOverlay/PausePopUp/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("21_xdbcw")
text = "Menü
"

[node name="ExitButton" type="Button" parent="UIOverlay/PausePopUp/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("21_xdbcw")
text = "Exit Game"

[node name="Unpause" type="Button" parent="UIOverlay/PausePopUp/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("21_xdbcw")
text = "Resume"

[node name="Compass" parent="UIOverlay" instance=ExtResource("39_jqxx3")]
process_mode = 3

[node name="StarProgressScene" parent="UIOverlay" instance=ExtResource("40_mllpk")]
layout_mode = 0
offset_left = 1872.0
offset_top = 790.0
offset_right = 2161.0
offset_bottom = 3428.0
scale = Vector2(0.101707, 0.101707)
mouse_filter = 2

[node name="StarCounter" type="Label" parent="UIOverlay"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 133.0
offset_right = 245.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0.637344, 0.570516, 0.883082, 1)
theme_override_font_sizes/font_size = 15
text = "adadad"
vertical_alignment = 1
script = ExtResource("41_o5osa")

[node name="FPSLabel" type="Label" parent="UIOverlay"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 152.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
text = "FPS:"
vertical_alignment = 1

[node name="Clock" type="ColorRect" parent="UIOverlay"]
layout_mode = 0
offset_left = 21.0
offset_top = 1004.0
offset_right = 61.0
offset_bottom = 1044.0
scale = Vector2(1.44115, 1.44115)
color = Color(0, 0, 0, 1)

[node name="Needle" type="ColorRect" parent="UIOverlay/Clock"]
layout_mode = 0
offset_left = 19.1147
offset_top = 24.3877
offset_right = 20.1147
offset_bottom = 34.3877
scale = Vector2(1, 1.561)

[node name="DefaultCube" parent="." instance=ExtResource("42_iv1be")]
transform = Transform3D(-0.866025, -0.433013, 0.25, 2.55173e-07, 0.5, 0.866026, -0.5, 0.75, -0.433012, 0.0210368, 1.40758, -2.77204)
mass = 0.5

[node name="Enviroment" type="Node3D" parent="."]

[node name="SpatialGrass" parent="Enviroment" instance=ExtResource("43_4ojq0")]
transform = Transform3D(0.518589, 0, 0, 0, 0.518589, 0, 0, 0, 0.518589, 0, 0.00668904, -0.0387895)

[node name="tree" parent="Enviroment" instance=ExtResource("44_vokpm")]
transform = Transform3D(1.43775, 0, 0, 0, 1.43775, 0, 0, 0, 1.43775, 5.76937, 0, 0)

[node name="column" parent="Enviroment" instance=ExtResource("45_lx214")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.197, 0, 6.339)

[node name="brickWallWithHoles" parent="Enviroment" instance=ExtResource("46_cibdb")]
transform = Transform3D(-9.86478e-09, 0, -0.22568, 0, 0.22568, 0, 0.22568, 0, -9.86478e-09, 3.82116, 0, -11.5996)

[node name="crystals" parent="Enviroment" instance=ExtResource("47_inrd4")]
transform = Transform3D(0.546056, 0, 0, 0, 0.546056, 0, 0, 0, 0.546056, 2.87135, 0, 3.1461)

[node name="brickWall" parent="Enviroment" instance=ExtResource("47_ryeko")]
transform = Transform3D(0.214763, 0, 0, 0, 0.214763, 0, 0, 0, 0.214763, 12.5597, -9.53674e-07, 11.8779)

[node name="brickWall2" parent="Enviroment" instance=ExtResource("47_ryeko")]
transform = Transform3D(0.214763, 0, 0, 0, 0.214763, 0, 0, 0, 0.214763, 12.5597, -9.53674e-07, 3.99464)

[node name="brickWall3" parent="Enviroment" instance=ExtResource("47_ryeko")]
transform = Transform3D(0.214763, 0, 0, 0, 0.214763, 0, 0, 0, 0.214763, 12.5597, -9.53674e-07, -3.86878)

[connection signal="body_entered" from="Stars/Star" to="Stars/Star" method="_on_body_entered"]
[connection signal="starCollected2" from="Stars/Star" to="UIOverlay/StarCounter" method="_on_star_star_collected_2"]
[connection signal="body_entered" from="Stars/Star2" to="Stars/Star2" method="_on_body_entered"]
[connection signal="starCollected2" from="Stars/Star2" to="UIOverlay/StarCounter" method="_on_star_star_collected_2"]
[connection signal="body_entered" from="Stars/Star4" to="Stars/Star4" method="_on_body_entered"]
[connection signal="starCollected2" from="Stars/Star4" to="UIOverlay/StarCounter" method="_on_star_star_collected_2"]
[connection signal="body_entered" from="Stars/Star5" to="Stars/Star5" method="_on_body_entered"]
[connection signal="starCollected2" from="Stars/Star5" to="UIOverlay/StarCounter" method="_on_star_star_collected_2"]
[connection signal="body_entered" from="Stars/Star6" to="Stars/Star6" method="_on_body_entered"]
[connection signal="starCollected2" from="Stars/Star6" to="UIOverlay/StarCounter" method="_on_star_star_collected_2"]
[connection signal="body_entered" from="Stars/Star7" to="Stars/Star7" method="_on_body_entered"]
[connection signal="starCollected2" from="Stars/Star7" to="UIOverlay/StarCounter" method="_on_star_star_collected_2"]
[connection signal="body_entered" from="Stars/Star8" to="Stars/Star8" method="_on_body_entered"]
[connection signal="starCollected2" from="Stars/Star8" to="UIOverlay/StarCounter" method="_on_star_star_collected_2"]
[connection signal="body_entered" from="Stars/Star9" to="Stars/Star9" method="_on_body_entered"]
[connection signal="starCollected2" from="Stars/Star9" to="UIOverlay/StarCounter" method="_on_star_star_collected_2"]
[connection signal="pressed" from="UIOverlay/PausePopUp/VBoxContainer/MenuButton" to="UIOverlay/PausePopUp" method="_on_menu_button_pressed"]
[connection signal="pressed" from="UIOverlay/PausePopUp/VBoxContainer/ExitButton" to="UIOverlay/PausePopUp" method="_on_exit_button_pressed"]
[connection signal="pressed" from="UIOverlay/PausePopUp/VBoxContainer/Unpause" to="UIOverlay/PausePopUp" method="_on_unpause_pressed"]
